# beakwise-camunda-lib

./: .env  Cargo.toml
src/: engine.rs  lib.rs
src/apis/: client.rs  condition_api.rs  configuration.rs  decision_evaluation_api.rs  deployment_api.rs  engine_api.rs  event_subscription_api.rs  external_task_api.rs  message_api.rs  metrics_api.rs  mod.rs  process_definition_api.rs  process_instance_api.rs  schema_log_api.rs  signal_api.rs  task_api.rs  task_attachment_api.rs  task_comment_api.rs  task_identity_link_api.rs  task_local_variable_api.rs  task_variable_api.rs  version_api.rs
src/errors/: errors.rs
src/models/: activity_instance_dto.rs  activity_instance_incident_dto.rs  activity_statistics_result_dto.rs  atom_link.rs  attachment_dto.rs  attachment_dto_all_of.rs  authorization_exception_dto.rs  authorization_exception_dto_all_of.rs  batch_dto.rs  case_definition_dto.rs  comment_dto.rs  comment_dto_all_of.rs  complete_external_task_dto.rs  complete_task_dto.rs  correlation_message_dto.rs  count_result_dto.rs  decision_definition_dto.rs  decision_dto.rs  decision_evaluation_dto.rs  decision_requirements_definition_dto.rs  delete_process_instances_dto.rs  deployment_dto.rs  deployment_dto_all_of.rs  deployment_resource_dto.rs  deployment_with_definitions_dto.rs  deployment_with_definitions_dto_all_of.rs  evaluation_condition_dto.rs  event_subscription_dto.rs  event_subscription_query_dto.rs  event_subscription_query_dto_sorting.rs  exception_dto.rs  execution_dto.rs  extend_lock_on_external_task_dto.rs  external_task_bpmn_error.rs  external_task_dto.rs  (+69 more)
(+1 files in other folders)
