[package]
name = "original_lib"
version = "0.1.0"
authors = ["IdemenB <baris.idemen@beakwise.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
url = "2.2.2"
reqwest = { version = "0.11.3", features = ["json","blocking","multipart"] }
thiserror = "1.0.25"